Added more lines to the default config to match what is installed in Subgraph OS.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -1,8 +1,22 @@
 {
-  "/usr/bin/grub-script-check":"E",
+  "/usr/bin/gnome-shell":"mr",
   "/usr/bin/grub-bios-setup":"E",
   "/usr/sbin/grub-mkdevicemap":"E",
   "/usr/sbin/grub-probe":"E",
+  "/usr/bin/grub-script-check":"E",
+  "/usr/bin/grub-mount":"m",
+  "/usr/sbin/grub-probe":"m",
+  "/usr/bin/mplayer":"m",
+  "/usr/bin/python2":"m",
+  "/usr/bin/python3":"m",
+  "/usr/bin/vlc":"m",
+  "/usr/lib/libreoffice/program/soffice.bin":"m",
+  "/usr/lib/openoffice/program/unopkg.bin":"m",
+  "/usr/lib/policy-kit-1/polkitd":"mr",
+  "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java":"mr",
+  "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac":"mr",
+  "/usr/lib/jvm/java-8-openjdk-amd64/bin/jar":"m",
+  "/usr/bin/gdbus":"mr",
   "/usr/lib/iceweasel/iceweasel":"pm",
   "/usr/lib/iceweasel/plugin-container":"m"
 }
