Implemented inotify, SetFlags safety controls, and nonroot config option.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -1,22 +1,81 @@
-{
-  "/usr/bin/gnome-shell":"mr",
-  "/usr/bin/grub-bios-setup":"E",
-  "/usr/sbin/grub-mkdevicemap":"E",
-  "/usr/sbin/grub-probe":"E",
-  "/usr/bin/grub-script-check":"E",
-  "/usr/bin/grub-mount":"m",
-  "/usr/sbin/grub-probe":"m",
-  "/usr/bin/mplayer":"m",
-  "/usr/bin/python2":"m",
-  "/usr/bin/python3":"m",
-  "/usr/bin/vlc":"m",
-  "/usr/lib/libreoffice/program/soffice.bin":"m",
-  "/usr/lib/openoffice/program/unopkg.bin":"m",
-  "/usr/lib/policy-kit-1/polkitd":"mr",
-  "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java":"mr",
-  "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac":"mr",
-  "/usr/lib/jvm/java-8-openjdk-amd64/bin/jar":"m",
-  "/usr/bin/gdbus":"mr",
-  "/usr/lib/iceweasel/iceweasel":"pm",
-  "/usr/lib/iceweasel/plugin-container":"m"
+{ "/usr/bin/gnome-shell": {
+    "flags": "mr",
+    "nonroot": true
+  },
+  "/usr/bin/grub-bios-setup": {
+    "flags": "E",
+    "nonroot": false 
+  },
+  "/usr/sbin/grub-mkdevicemap": {
+    "flags": "E",
+    "nonroot": false
+  },
+  "/usr/sbin/grub-probe": {
+    "flags": "E",
+    "nonroot": false
+  },
+  "/usr/bin/grub-script-check":  {
+    "flags": "E",
+    "nonroot": false
+  },
+  "/usr/bin/grub-mount": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/sbin/grub-probe": {
+    "flags": "m",
+    "nonroot": false
+  }, 
+  "/usr/bin/mplayer": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/bin/python2": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/bin/python3": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/bin/vlc": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/lib/libreoffice/program/soffice.bin": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/lib/openoffice/program/unopkg.bin": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/lib/policy-kit-1/polkitd": {
+    "flags": "mr",
+    "nonroot": false
+  },
+  "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java": {
+    "flags": "mr",
+    "nonroot": false
+  },
+  "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac": {
+    "flags": "mr",
+    "nonroot": false
+  },
+  "/usr/lib/jvm/java-8-openjdk-amd64/bin/jar": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/bin/gdbus": {
+    "flags": "mr",
+    "nonroot": false
+  },
+  "/usr/lib/iceweasel/iceweasel": {
+    "flags": "pm",
+    "nonroot": false
+  },
+  "/usr/lib/iceweasel/plugin-container": {
+    "flags": "m",
+    "nonroot": false
+  }
 }
