Changed some of the settings in paxrat.conf.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -1,6 +1,6 @@
 { "/usr/bin/gnome-shell": {
     "flags": "mr",
-    "nonroot": true
+    "nonroot": false
   },
   "/usr/bin/grub-bios-setup": {
     "flags": "E",
@@ -54,15 +54,15 @@
     "flags": "mr",
     "nonroot": false
   },
-  "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java": {
+  "/usr/lib/jvm/java-7-openjdk-amd64/jre/bin/java": {
     "flags": "mr",
     "nonroot": false
   },
-  "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac": {
+  "/usr/lib/jvm/java-7-openjdk-amd64/bin/javac": {
     "flags": "mr",
     "nonroot": false
   },
-  "/usr/lib/jvm/java-8-openjdk-amd64/bin/jar": {
+  "/usr/lib/jvm/java-7-openjdk-amd64/bin/jar": {
     "flags": "m",
     "nonroot": false
   },
