Added flags for some /usr/lib/gnome-session/* binaries to the default conf.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -2,6 +2,18 @@
     "flags": "mr",
     "nonroot": false
   },
+  "/usr/lib/gnome-session/gnome-session-check-accelerated": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/lib/gnome-session/gnome-session-check-accelerated-helper": {
+    "flags": "m",
+    "nonroot": false
+  },
+  "/usr/lib/gnome-session/gnome-session-failed": {
+    "flags": "m",
+    "nonroot": false
+  },
   "/usr/bin/grub-bios-setup": {
     "flags": "E",
     "nonroot": false 
