--- a/paxrat.conf
+++ b/paxrat.conf
@@ -14,6 +14,10 @@
     "flags": "m",
     "nonroot": false
   },
+  "/usr/bin/seahorse": {
+    "flags": "m",
+    "nonroot": false
+  },
   "/usr/bin/grub-bios-setup": {
     "flags": "E",
     "nonroot": false 
