nonroot option is actually optional

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -1,97 +1,73 @@
 { "/usr/bin/gnome-shell": {
-    "flags": "mr",
-    "nonroot": false
+    "flags": "mr"
   },
   "/usr/lib/gnome-session/gnome-session-check-accelerated": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/lib/gnome-session/gnome-session-check-accelerated-helper": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/lib/gnome-session/gnome-session-failed": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/bin/seahorse": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/bin/grub-bios-setup": {
-    "flags": "E",
-    "nonroot": false 
+    "flags": "E"
   },
   "/usr/sbin/grub-mkdevicemap": {
-    "flags": "E",
-    "nonroot": false
+    "flags": "E"
   },
   "/usr/sbin/grub-probe": {
-    "flags": "E",
-    "nonroot": false
+    "flags": "E"
   },
   "/usr/bin/grub-script-check":  {
-    "flags": "E",
-    "nonroot": false
+    "flags": "E"
   },
   "/usr/bin/grub-mount": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/sbin/grub-probe": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   }, 
   "/usr/bin/mplayer": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/bin/python2": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/bin/python3": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/bin/vlc": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/lib/libreoffice/program/soffice.bin": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/lib/openoffice/program/unopkg.bin": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/lib/policy-kit-1/polkitd": {
-    "flags": "mr",
-    "nonroot": false
+    "flags": "mr"
   },
   "/usr/lib/jvm/java-7-openjdk-amd64/jre/bin/java": {
-    "flags": "mr",
-    "nonroot": false
+    "flags": "mr"
   },
   "/usr/lib/jvm/java-7-openjdk-amd64/bin/javac": {
-    "flags": "mr",
-    "nonroot": false
+    "flags": "mr"
   },
   "/usr/lib/jvm/java-7-openjdk-amd64/bin/jar": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   },
   "/usr/bin/gdbus": {
-    "flags": "mr",
-    "nonroot": false
+    "flags": "mr"
   },
   "/usr/lib/iceweasel/iceweasel": {
-    "flags": "pm",
-    "nonroot": false
+    "flags": "pm"
   },
   "/usr/lib/iceweasel/plugin-container": {
-    "flags": "m",
-    "nonroot": false
+    "flags": "m"
   }
 }
