Added firefox-esr pax flags

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -69,5 +69,11 @@
   },
   "/usr/lib/iceweasel/plugin-container": {
     "flags": "m"
+  },
+  "/usr/lib/firefox-esr/firefox-esr": {
+    "flags": "m"
+  },
+  "/usr/lib/firefox-esr/plugin-container": {
+    "flags": "m"
   }
 }
