--- a/paxrat.conf
+++ b/paxrat.conf
@@ -117,5 +117,11 @@
   },
   "/usr/lib/gnome-terminal/gnome-terminal-server": {
     "flags": "m"
+  },
+  "/usr/lib/chromium/chromium": {
+    "flags": "m"
+  },
+  "/usr/bin/gnome-builder": {
+    "flags": "m"
   }
 }
