paxrat.conf: NOMPROTECT for lightdm-gtk-greeter
Signed-off-by: Santiago Ruano Rincón <santiago@debian.org>

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -46,6 +46,9 @@
   "/usr/lib/libreoffice/program/soffice.bin": {
     "flags": "m"
   },
+  "/usr/sbin/lightdm-gtk-greeter": {
+    "flags": "m"
+  },
   "/usr/lib/policykit-1/polkitd": {
     "flags": "mr"
   },
