paxrat.conf: NOMPROTECT for mutt
Signed-off-by: Santiago Ruano Rincón <santiago@debian.org>

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -127,6 +127,9 @@
   "/usr/bin/gnome-builder": {
     "flags": "m"
   },
+  "/usr/bin/mutt": {
+    "flags": "m"
+  },
   "/usr/bin/pulseaudio": {
     "flags": "m"
   }
