Added PaX flag for WebKitWebProcess (needed by yelp).

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -126,5 +126,8 @@
   },
   "/usr/bin/pulseaudio": {
     "flags": "m"
+  },
+  "/usr/lib/x86_64-linux-gnu/webkit2gtk-4.0/WebKitWebProcess": {
+    "flags": "m"
   }
 }
