Removed duplicate PaX flag for grub-probe. Added PaX flag for ricochet.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -34,9 +34,6 @@
   "/usr/bin/grub-mount": {
     "flags": "m"
   },
-  "/usr/sbin/grub-probe": {
-    "flags": "m"
-  }, 
   "/usr/bin/python2": {
     "flags": "m"
   },
@@ -128,6 +125,9 @@
     "flags": "m"
   },
   "/usr/lib/x86_64-linux-gnu/webkit2gtk-4.0/WebKitWebProcess": {
+    "flags": "m"
+  },
+  "/usr/bin/ricochet": {
     "flags": "m"
   }
 }
