--- a/paxrat.conf
+++ b/paxrat.conf
@@ -129,5 +129,11 @@
   },
   "/usr/bin/ricochet": {
     "flags": "m"
+  },
+  "/usr/bin/fw-settings": {
+    "flags": "m"
+  },
+  "/usr/sbin/fw-daemon": {
+    "flags": "m"
   }
 }
