Added PaX flags for mono-sgen, docker binaries, gnome-logs, and Subgraph Oz binaries.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -135,5 +135,56 @@
   },
   "/usr/sbin/fw-daemon": {
     "flags": "m"
+  },
+  "/usr/bin/mono-sgen": {
+    "flags": "m"
+  },
+  "/usr/bin/dockerd": {
+    "flags": "m"
+  },
+  "/usr/bin/docker": {
+    "flags": "m"
+  },
+  "/usr/bin/docker-containerd": {
+    "flags": "m"
+  },
+  "/usr/bin/docker-containerd-shim": {
+    "flags": "m"
+  },
+  "/usr/bin/docker-runc": {
+    "flags": "m"
+  },
+  "/usr/bin/gnome-logs": {
+   "flags": "m"
+  },
+  "/usr/bin/oz": {
+    "flags": "m"
+  },
+  "/usr/sbin/oz-setup": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-seccomp": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-seccomp-tracer": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-init": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-mount": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-umount": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-ovpn-route-down": {
+    "flags": "m"
+  },
+  "/usr/bin/oz-ovpn-route-up": {
+    "flags": "m"
+  },
+  "/usr/sbin/oz-daemon": {
+    "flags": "m"
   }
 }
