Updated icedove PaX flags. Added PaX flags for thunderbird, ag, and spotify.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -80,10 +80,10 @@
     "flags": "m"
   },
   "/usr/lib/icedove/icedove-bin": {
-    "flags": "m"
+    "flags": "mr"
   },
   "/usr/lib/icedove/icedove": {
-    "flags": "m"
+    "flags": "mr"
   },
   "/usr/lib/x86_64-linux-gnu/gstreamer0.10/gstreamer-0.10/gst-plugin-scanner": {
     "flags": "m"
@@ -185,6 +185,21 @@
     "flags": "m"
   },
   "/usr/sbin/oz-daemon": {
+    "flags": "m"
+  },
+  "/usr/lib/thunderbird/thunderbird-bin": {
+    "flags": "mr"
+  },
+  "/usr/lib/thunderbird/thunderbird": {
+    "flags": "mr"
+  },
+  "/usr/bin/ag": {
+    "flags": "m"
+  },
+  "/opt/spotify/spotify-client/Data/SpotifyHelper": {
+    "flags": "m"
+  },
+  "/opt/spotify/spotify-client/spotify": {
     "flags": "m"
   }
 }
