Added PaX flags for mutt and lightdm-gtk-greeter. Closes #16.

--- a/paxrat.conf
+++ b/paxrat.conf
@@ -201,5 +201,11 @@
   },
   "/opt/spotify/spotify-client/spotify": {
     "flags": "m"
+  },
+  "/usr/bin/mutt": {
+    "flags": "m"
+  },
+  "/usr/sbin/lightdm-gtk-greeter": {
+    "flags": "m"
   }
 }
