--- a/debian/rules
+++ b/debian/rules
@@ -1,32 +1,20 @@
 #!/usr/bin/make -f
-# See debhelper(7) (uncomment to enable)
-# output every command that modifies files on the build system.
-#DH_VERBOSE = 1
 
-# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
-# see FEATURE AREAS in dpkg-buildflags(1)
-#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export DH_VERBOSE=1
+export DH_OPTIONS
+export DH_GOPKG := github.com/subgraph/paxrat
 
-# see ENVIRONMENT in dpkg-buildflags(1)
-# package maintainers to append CFLAGS
-#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
-# package maintainers to append LDFLAGS
-#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
-
-
-# main packaging script based on dh7 syntax
 %:
-	dh $@ --buildsystem=golang --with=golang --with=systemd 
+	dh $@ --buildsystem=golang --with=golang,systemd 
 
-# debmake generated override targets
-# This is example for Cmake (See http://bugs.debian.org/641051 )
-#override_dh_auto_configure:
-#	dh_auto_configure -- \
-#	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
+override_dh_auto_install:
+	dh_auto_install
+	mkdir -p $(CURDIR)/debian/paxrat/sbin
+	mv $(CURDIR)/debian/paxrat/usr/bin/paxrat $(CURDIR)/debian/paxrat/sbin
+	rm -rf $(CURDIR)/debian/paxrat/usr/share/gocode
 
-
-
-
+override_dh_auto_test:
+	@echo skipped auto test
