Added plugin container to tbl config...

--- a/paxrat_tbl.conf
+++ b/paxrat_tbl.conf
@@ -4,7 +4,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_en-US/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_ar/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_ar/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -12,7 +20,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_de/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_es-ES/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_es-ES/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -20,7 +36,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_fa/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_fr/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_fr/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -28,7 +52,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_it/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_ja/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_ja/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -36,7 +68,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_ko/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_nl/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_nl/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -44,7 +84,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_pl/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_pt-PT/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_pt-PT/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -52,7 +100,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_ru/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_tr/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_tr/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   },
@@ -60,7 +116,15 @@
     "flags": "m",
     "nonroot": true
   },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_vi/Browser/plugin-container": {
+    "flags": "m",
+    "nonroot": true
+  },
   "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_zh-CH/Browser/firefox": {
+    "flags": "m",
+    "nonroot": true
+  },
+  "/home/user/.local/share/torbrowser/tbb/x86_64/tor-browser_zh-CH/Browser/plugin-container": {
     "flags": "m",
     "nonroot": true
   }
