Updated to v1.31.0. Changed build rules to use "-buildmode=pie".

--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,9 @@ export DH_GOPKG := github.com/subgraph/paxrat
 %:
 	dh $@ --buildsystem=golang --with=golang,systemd 
 
+override_dh_auto_build:
+	dh_auto_build -- -buildmode=pie -pkgdir=$$(mktemp -d -p $(CURDIR))
+
 override_dh_auto_install:
 	dh_auto_install
 	mkdir -p $(CURDIR)/debian/paxrat/sbin
